--- a/THE UNREAD ARCHIVE ~ FINAL/book.html
+++ b/THE UNREAD ARCHIVE ~ FINAL/book.html
@@ -19,15 +19,15 @@
       display: flex;
       flex-direction: column;
       background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
-      overflow-x: hidden;   /* ✅ fixed: only hide horizontal overflow */
+      overflow-x: hidden; /* ✅ allow scrolling but hide horizontal overflow */
     }
     /* Tiny stars animation */
     body::before {
       content: '';
       position: absolute;
       top: 0; left: 0;
-      width: 100%;   /* ✅ fixed (was 200%) */
-      height: 100%;  /* ✅ fixed (was 200%) */
+      width: 100%;
+      height: 100%;
       background: transparent url('https://www.transparenttextures.com/patterns/stardust.png') repeat;
       animation: moveStars 60s linear infinite;
       opacity: 0.5;
@@ -137,31 +137,6 @@
       background: rgba(255,255,255,0.1);
       border-radius: 6px;
     }
-    /* Dropdown */
-    .dropdown {
-      position: relative;
-    }
-    .dropdown-content {
-      display: none;
-      position: absolute;
-      top: 50px;
-      left: 0;
-      background: rgba(0,0,0,0.95);
-      min-width: 180px;
-      border-radius: 6px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.4);
-    }
-    .dropdown-content a {
-      display: block;
-      padding: 10px 14px;
-    }
-    .dropdown-content a:hover {
-      background: rgba(255,218,121,0.1);
-      color: #ffda79;
-    }
-    .dropdown:hover .dropdown-content {
-      display: block;
-    }
     /* Search box */
     .search-box {
       position: absolute;
@@ -176,6 +151,7 @@
       text-align: right;
     }
     /* ------------------ MAIN ------------------ */
+
 .books-section {
   display: flex;
   justify-content: center;
@@ -270,15 +246,17 @@
       text-align: center;
       padding: 20px;
       font-size: 0.9em;
+      margin-top: auto;      /* ✅ keeps footer at bottom */
+      background: #111;      /* dark solid footer background */
+      color: #fdfdfd;        /* white text */
       position: relative;
-      z-index: 1;
-      margin-top: auto;
-      background: #111;   /* ✅ ensure footer background */
-      color: #fdfdfd;     /* ✅ white text */
+      bottom: 0;
+      left: 0;
+      width: 100%;
     }
     footer a {
-      color: #111;
-      background: #ffda79;
+      color: #111;         /* dark text */
+      background: #ffda79; /* yellow background */
       padding: 5px 12px;
       border-radius: 20px;
       text-decoration: none;
@@ -317,16 +295,7 @@
       <div class="nav-left">
         <a href="home.html">Home</a>
         <a href="about.html">About</a>
-        <div class="dropdown">
-          <a href="#">Archive ▾</a>
-          <div class="dropdown-content">
-            <a href="poetry.html">Poetry</a>
-            <a href="prose.html">Prose</a>
-            <a href="quotes.html">Quotes</a>
-            <a href="literature.html">Literature</a>
-            <a href="small-words.html">Small Words</a>
-          </div>
-        </div>
+        <a href="archive.html">Archive</a>
         <a href="article.html">Articles</a>
         <a href="book.html">Books</a>
         <a href="./signin.html">Sign In</a>
@@ -338,10 +307,8 @@
       </div>
     </div>
   </nav>
-
-  <!-- MAIN LAYOUT -->
-
-
+  <!-- MAIN SECTION -->
+    
 <main class="books-section">
   <!-- Books Sidebar -->
   <aside class="books-list">
@@ -412,10 +379,16 @@
   </aside>
 </main>
 
+
   <!-- FOOTER -->
   <footer>
-    <p>Contact us: <a href="mailto:contact@unreadarchive.com">contact@unreadarchive.com</a></p>
-    <p>&copy; 2025 The Unread Archive — A digital home for readers and writers.</p>
+    <p>
+      Contact us: 
+      <a href="mailto:contact@unreadarchive.com">contact@unreadarchive.com</a>
+    </p>
+    <p>
+      &copy; 2025 The Unread Archive — A digital home for readers and writers.
+    </p>
   </footer>
 </body>
 </html>
