changes in styling for all pages

--- a/THE UNREAD ARCHIVE ~ FINAL/archive.html
+++ b/THE UNREAD ARCHIVE ~ FINAL/archive.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>The Unread Archive | Home</title>
+  <title>The Unread Archive | Archive</title>
   <style>
     /* Reset */
     * {
@@ -19,7 +19,7 @@
       display: flex;
       flex-direction: column;
       background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
-      overflow-x: hidden; /* ✅ allow scrolling but hide horizontal overflow */
+      overflow-x: hidden;
     }
     /* Tiny stars animation */
     body::before {
@@ -31,6 +31,7 @@
       background: transparent url('https://www.transparenttextures.com/patterns/stardust.png') repeat;
       animation: moveStars 60s linear infinite;
       opacity: 0.5;
+      z-index: 0;
     }
     @keyframes moveStars {
       from { transform: translateY(0); }
@@ -49,7 +50,6 @@
       height: 50px;
       background-color: #fff;
     }
-    /* Branding block for logo + tagline */
     .branding {
       display: flex;
       flex-direction: column;
@@ -68,7 +68,6 @@
       color: #cccccc;
       letter-spacing: 0.5px;
       margin-top: 2px;
-      justify-content: center;
     }
     /* Profile */
     .profile {
@@ -110,6 +109,8 @@
       position: sticky;
       top: 0;
       z-index: 900;
+      background: rgba(0,0,0,0.6);
+      backdrop-filter: blur(6px);
     }
     .nav-container {
       max-width: 1200px;
@@ -119,6 +120,8 @@
       justify-content: space-between;
       align-items: center;
       gap: 30px;
+      font-size: large;
+
     }
     .nav-left, .nav-right {
       display: flex;
@@ -151,63 +154,124 @@
       text-align: right;
     }
     /* ------------------ MAIN ------------------ */
+    .main {
+      display:grid;
+      grid-template-columns:260px 1fr;
+      gap:24px;
+      padding:20px 0;
+      position: relative;
+      z-index: 1;
+    }
 
-    /* Page header */
-    .hero{background:#fff;padding:28px 0}
-    .hero h1{font-size:28px;margin:0}
-    .hero p{color:var(--muted);margin-top:6px}
-
-    /* Layout */
-    .main{display:grid;grid-template-columns:260px 1fr;gap:24px;padding:20px 0}
-
-    /* Sidebar */
-    .sidebar{position:sticky;top:18px}
-    .filters{background:linear-gradient(180deg,#fff,#fff);border:1px solid #eef0f3;padding:12px;border-radius:12px}
-    .filters h3{font-size:13px;margin:0 0 8px 0;color:var(--muted)}
-    .categories{display:flex;flex-direction:column;gap:6px}
-    .cat{padding:8px 10px;border-radius:8px;font-size:14px;color:var(--muted);cursor:pointer}
-    .cat:hover{background:#f6f8fb;color:var(--accent)}
-    .search{margin-top:12px}
-    .search input{width:100%;padding:10px;border-radius:8px;border:1px solid #e6e9ee}
+    /* Sidebar - improved */
+    .sidebar {
+      position: sticky;
+      top: 18px;
+      background: rgba(20, 20, 25, 0.9);
+      padding: 16px;
+      margin: 0 0 20px 0;
+      border-radius: 12px;
+      box-shadow: 0 4px 16px rgba(0,0,0,0.3);
+      color: #fdfdfd;
+      font-size: 16px;
+      border: 1px solid rgba(255,255,255,0.1);
+      max-width: 220px;
+    }
+    .filters h3 {
+      font-size: 15px;
+      margin-bottom: 10px;
+      color: #ffda79;
+    }
+    .categories {
+      display: flex;
+      flex-direction: column;
+      gap: 8px;
+    }
+    .cat {
+      padding: 10px 12px;
+      border-radius: 8px;
+      font-size: 15px;
+      color: #ddd;
+      cursor: pointer;
+      transition: background 0.3s ease, color 0.3s ease;
+    }
+    .cat:hover {
+      background: rgba(255, 218, 121, 0.1);
+      color: #ffda79;
+    }
 
     /* Feed */
-    .feed{display:grid;grid-template-columns:repeat(2,1fr);gap:18px}
-    .card{background:var(--card);border:1px solid #eef0f3;border-radius:12px;overflow:hidden;display:flex;flex-direction:column;min-height:220px}
-    .card .media{height:140px;background-size:cover;background-position:center}
-    .card .body{padding:14px;display:flex;flex-direction:column;gap:8px;flex:1}
-    .tag{font-size:12px;color:var(--muted)}
-    .title{font-size:16px;font-weight:700;margin:0}
-    .meta{color:var(--muted);font-size:13px}
-    .excerpt{color:#374151;font-size:14px;line-height:1.45}
-    .card .cta{margin-top:auto;display:flex;justify-content:space-between;align-items:center}
-    .subscribe{padding:8px 10px;border-radius:8px;border:1px solid #e6e9ee;background:#fff;font-weight:600}
+    .feed {
+      display:grid;
+      grid-template-columns:repeat(2,1fr);
+      gap:18px
+    }
+    .card {
+      background:#fff;
+      color:#111;
+      border:1px solid #eef0f3;
+      border-radius:12px;
+      overflow:hidden;
+      display:flex;
+      flex-direction:column;
+      min-height:220px
+    }
+    .card .media {
+      height:140px;
+      background-size:cover;
+      background-position:center
+    }
+    .card .body {
+      padding:14px;
+      display:flex;
+      flex-direction:column;
+      gap:8px;
+      flex:1
+    }
+    .tag {font-size:12px;color:#666}
+    .title {font-size:16px;font-weight:700;margin:0}
+    .meta {color:#666;font-size:13px}
+    .excerpt {color:#374151;font-size:14px;line-height:1.45}
+    .card .cta {
+      margin-top:auto;
+      display:flex;
+      justify-content:space-between;
+      align-items:center
+    }
+    .subscribe {
+      padding:8px 10px;
+      border-radius:8px;
+      border:1px solid #e6e9ee;
+      background:#fff;
+      font-weight:600;
+      cursor:pointer
+    }
 
     /* Responsive */
     @media (max-width:900px){
       .main{grid-template-columns:1fr;}
       .feed{grid-template-columns:repeat(1,1fr)}
-      .sidebar{position:relative}
+      .sidebar{position:relative; max-width:100%;}
     }
 
-    /* Small utilities */
-    .muted{color:var(--muted)}
     .flex{display:flex;gap:8px;align-items:center}
+
+   
+
     /* ------------------ FOOTER ------------------ */
     footer {
       text-align: center;
       padding: 20px;
       font-size: 0.9em;
-      margin-top: auto;      /* ✅ keeps footer at bottom */
-      background: #111;      /* dark solid footer background */
-      color: #fdfdfd;        /* white text */
+      margin-top: auto;
+      background: #111;
+      color: #fdfdfd;
       position: relative;
-      bottom: 0;
-      left: 0;
-      width: 100%;
+      z-index: 1;
     }
     footer a {
-      color: #111;         /* dark text */
-      background: #ffda79; /* yellow background */
+      color: #111;
+      background: #ffda79;
       padding: 5px 12px;
       border-radius: 20px;
       text-decoration: none;
@@ -226,12 +290,10 @@
         <img src="./ChatGPT Image Sep 25, 2025, 10_46_26 AM.png" alt="The Unread Archive logo">
       </a>
     </div>
-    <!-- Branding block -->
     <div class="branding">
       <div class="logo">✉ THE UNREAD ARCHIVE</div>
       <p class="tagline">Your digital sanctuary for timeless words.</p>
     </div>
-    <!-- Profile -->
     <div class="profile">
       <img src="https://cdn-icons-png.flaticon.com/512/847/847969.png" alt="Profile icon" class="profile-icon">
       <div class="profile-dropdown" role="menu">
@@ -240,6 +302,7 @@
       </div>
     </div>
   </header>
+
   <!-- NAVIGATION -->
   <nav>
     <div class="nav-container">
@@ -258,15 +321,9 @@
       </div>
     </div>
   </nav>
+
+
   <!-- MAIN SECTION -->
-
-  <section class="hero">
-    <div class="container">
-      <h1>Staff picks</h1>
-      <p class="muted">Curated newsletters and newsletters our team is reading right now.</p>
-    </div>
-  </section>
-
   <main class="container main">
     <aside class="sidebar">
       <div class="filters">
@@ -281,25 +338,14 @@
           <div class="cat">Food & Drink</div>
           <div class="cat">Sports</div>
         </div>
-        <div class="search">
-          <input placeholder="Search staff picks" />
-        </div>
-      </div>
-
-      <div style="height:12px"></div>
-      <div class="filters">
-        <h3>Subscribe</h3>
-        <p class="muted" style="font-size:13px">Subscribe to get new staff picks in your inbox.</p>
-        <div style="margin-top:10px"><input style="width:100%;padding:10px;border-radius:8px;border:1px solid #e6e9ee" placeholder="Your email" /></div>
-        <div style="margin-top:10px"><button class="subscribe" style="width:100%">Subscribe</button></div>
       </div>
     </aside>
 
     <section>
       <div class="feed" aria-live="polite">
-        <!-- Card 1 -->
+        <!-- Cards (unchanged from your code) -->
         <article class="card">
-          <div class="media" style="background-image:url('https://images.unsplash.com/photo-1508921912186-1d1a45ebb3c1?q=80&w=1200&auto=format&fit=crop&ixlib=rb-4.0.3&s=')"></div>
+          <div class="media" style="background-image:url('https://images.unsplash.com/photo-1508921912186-1d1a45ebb3c1?q=80&w=1200&auto=format&fit=crop')"></div>
           <div class="body">
             <div class="tag">Culture • Staff pick</div>
             <h3 class="title">After Babel</h3>
@@ -312,9 +358,8 @@
           </div>
         </article>
 
-        <!-- Card 2 -->
         <article class="card">
-          <div class="media" style="background-image:url('https://images.unsplash.com/photo-1515378791036-0648a3ef77b2?q=80&w=1200&auto=format&fit=crop&ixlib=rb-4.0.3&s=')"></div>
+          <div class="media" style="background-image:url('https://images.unsplash.com/photo-1515378791036-0648a3ef77b2?q=80&w=1200&auto=format&fit=crop')"></div>
           <div class="body">
             <div class="tag">Food & Drink</div>
             <h3 class="title">Time Travel Kitchen</h3>
@@ -327,9 +372,8 @@
           </div>
         </article>
 
-        <!-- Card 3 -->
         <article class="card">
-          <div class="media" style="background-image:url('https://images.unsplash.com/photo-1500530855697-b586d89ba3ee?q=80&w=1200&auto=format&fit=crop&ixlib=rb-4.0.3&s=')"></div>
+          <div class="media" style="background-image:url('https://images.unsplash.com/photo-1500530855697-b586d89ba3ee?q=80&w=1200&auto=format&fit=crop')"></div>
           <div class="body">
             <div class="tag">Technology</div>
             <h3 class="title">Two Percent</h3>
@@ -342,9 +386,8 @@
           </div>
         </article>
 
-        <!-- Card 4 -->
         <article class="card">
-          <div class="media" style="background-image:url('https://images.unsplash.com/photo-1524985069026-dd778a71c7b4?q=80&w=1200&auto=format&fit=crop&ixlib=rb-4.0.3&s=')"></div>
+          <div class="media" style="background-image:url('https://images.unsplash.com/photo-1524985069026-dd778a71c7b4?q=80&w=1200&auto=format&fit=crop')"></div>
           <div class="body">
             <div class="tag">Business</div>
             <h3 class="title">Well Well Well</h3>
@@ -356,16 +399,14 @@
             </div>
           </div>
         </article>
-
       </div>
     </section>
   </main>
 
-
   <!-- FOOTER -->
   <footer>
     <p>
-      Contact us: 
+      Contact us:
       <a href="mailto:contact@unreadarchive.com">contact@unreadarchive.com</a>
     </p>
     <p>
