--- a/THE UNREAD ARCHIVE ~ FINAL/book.html
+++ b/THE UNREAD ARCHIVE ~ FINAL/book.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>The Unread Archive | Home</title>
+  <title>The Unread Archive | Book</title>
   <style>
     /* Reset */
     * {
@@ -119,6 +119,7 @@
       justify-content: space-between;
       align-items: center;
       gap: 30px;
+      font-size: large;
     }
     .nav-left, .nav-right {
       display: flex;
