--- a/THE UNREAD ARCHIVE ~ FINAL/article.html
+++ b/THE UNREAD ARCHIVE ~ FINAL/article.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>The Unread Archive | Home</title>
+  <title>The Unread Archive | Article</title>
   <style>
     /* Reset */
     * {
@@ -119,6 +119,9 @@
       justify-content: space-between;
       align-items: center;
       gap: 30px;
+      font-size: large;
+font-size: large;
+
     }
     .nav-left, .nav-right {
       display: flex;
@@ -151,25 +154,25 @@
       text-align: right;
     }
     /* ------------------ MAIN ------------------ */
- .container {
+    .container {
       display: grid;
-      grid-template-columns: 1fr 2fr;
+      grid-template-columns: 1fr 2fr; /* left Quotes, right grid */
       gap: 40px;
       padding: 40px;
       width: 90%;
       max-width: 1200px;
       margin: auto;
+      align-items: stretch;
     }
 
     .left-rect {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr); /* two side by side */
-      padding: 20px;
-      gap: 20px;
+      background: rgba(255, 255, 255, 0.05);
       border-radius: 12px;
-      overflow-y: auto;
-      grid-row: span 2; /* spans both rows */
-      align-items: stretch; /* ensures same height */
+      padding: 20px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
     }
 
     .right-grid {
@@ -182,15 +185,15 @@
 
     .content-card {
       background: rgba(255, 255, 255, 0.05);
-      pborder-radius: 12px;
-  padding: 20px 25px;
+      border-radius: 12px;
+      padding: 20px 25px;
       backdrop-filter: blur(6px);
-  box-shadow: 0 4px 10px rgba(0,0,0,0.3);
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between; /* balances content */
-  min-height: 250px; /* ensures consistent height */
-  transition: transform 0.2s ease, box-shadow 0.2s ease;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between; /* balances content */
+      min-height: 250px; /* ensures consistent height */
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
     }
 
     .content-card h2 {
@@ -290,21 +293,19 @@
     </div>
   </nav>
   <!-- MAIN SECTION -->
- <div class="container">
+  <div class="container">
     
     <!-- Quotes Section in left rect -->
     <div class="left-rect">
-      <article class="content-card">
-        <header><h2>Quotes</h2></header>
-        <blockquote>“The opposite of love is not hate, it's indifference...” <cite>— Elie Wiesel</cite></blockquote>
-        <blockquote>“Never doubt that a small group of thoughtful, committed citizens can change the world...” <cite>— Margaret Mead</cite></blockquote>
-        <blockquote>“How wonderful it is that nobody need wait a single moment...” <cite>— Anne Frank</cite></blockquote>
-        <blockquote>“Man is a mystery. It needs to be unraveled...” <cite>— Fyodor Dostoevsky</cite></blockquote>
-        <blockquote>"I cannot make you understand... what is happening inside me." <cite>— Franz Kafka</cite></blockquote>
-        <blockquote>"I never wish to be easily defined... transparent, paradoxically iridescent creature." <cite>— Franz Kafka</cite></blockquote>
-        <blockquote>"I have a deeply hidden and inarticulate desire..." <cite>— Virginia Woolf</cite></blockquote>
-        <blockquote>"What is the meaning of life? ... little daily miracles..." <cite>— Virginia Woolf</cite></blockquote>
-      </article>
+      <h2>Quotes</h2>
+      <blockquote>“The opposite of love is not hate, it's indifference...” <cite>— Elie Wiesel</cite></blockquote>
+      <blockquote>“Never doubt that a small group of thoughtful, committed citizens can change the world...” <cite>— Margaret Mead</cite></blockquote>
+      <blockquote>“How wonderful it is that nobody need wait a single moment...” <cite>— Anne Frank</cite></blockquote>
+      <blockquote>“Man is a mystery. It needs to be unraveled...” <cite>— Fyodor Dostoevsky</cite></blockquote>
+      <blockquote>"I cannot make you understand... what is happening inside me." <cite>— Franz Kafka</cite></blockquote>
+      <blockquote>"I never wish to be easily defined... transparent, paradoxically iridescent creature." <cite>— Franz Kafka</cite></blockquote>
+      <blockquote>"I have a deeply hidden and inarticulate desire..." <cite>— Virginia Woolf</cite></blockquote>
+      <blockquote>"What is the meaning of life? ... little daily miracles..." <cite>— Virginia Woolf</cite></blockquote>
     </div>
 
     <!-- Right Grid Sections -->
